--- a/beakjoon/C_scripts/C_scripts.vcxproj.filters
+++ b/beakjoon/C_scripts/C_scripts.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="2741.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2752.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
